2009-09-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#135059 - (S3)Home view panning slower over applets than
	                       desktop
	
	* control: Requires clutter maemo49, so updated
	* src/home/hd-home.c: use clutter_grab_pointer_without_pick to let us
	grab clutter input without having clutter do costly selection for us
	each frame.

2009-09-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Apply patch from Phil Carmody to add X Terminal keyboard shortcut.

	* src/main.c: "<shift><ctrl>x" causes execution of osso-xterm.
	Fixes: NB#136949 - Feature/Info request - new 'magic keys' on the

2009-09-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#136031 [PATCH] The window closing tone is played twice on closing
		  an app from the switcher

	* src/home/hd-task-navigator.c (turnoff_effect):
	  Don't make redundant noise as it is made by hd_comp_mgr_effect() now.

2009-09-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#135948 [PATCH] 'Zombie window' seen in email

	* src/home/hd-task-navigator.c (add_nothumb):
	  Reset the new nothumb's opacity as it may have been orphaned
	  when it was transparent.

2009-09-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#137478 [S3 PROPOSAL]Switcher becomes non responding on opening
		  power menu while on switcher view.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Go HOME again if an application menu is mapped.  This is for the
	  pwk menu -- ordinary appmenus are not supposed to be mapped when
	  the application is not in the foreground (ie. we're not in APP
	  state).

2009-09-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#136911 [PR1.1 proposal] Windows is-topmost property is TRUE
		  for a second after call ui closes

	* src/util/hd-transition.h
	* src/util/hd-transition.c (hd_transition_rotating_will_change_state):
	  Added function to tell whether the rotating fsm is known to be
	  changing state...
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_restack):